--- a/src/backend/requirements.txt
+++ b/src/backend/requirements.txt
@@ -1,5 +1,3 @@
-SQLAlchemy==1.2.14
-Flask-SQLAlchemy==2.3.2
-Flask-RESTful==0.3.6
 marshmallow==2.17.0
-psycopg2-binary==2.7.6.1
+mongo-thingy==0.11.0
+flask-api==1.0
