--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -4,18 +4,32 @@ version: '3'
 services:
   backend:
     build: backend
+    depends_on: 
+      - mongo
     ports:
       - "5000:5000"
     volumes:
       - ./backend:/app
     environment:
-      - POSTGRES_USERNAME=postgres
-      - POSTGRES_PASSWORD=docker
-      - POSTGRES_HOST=database
-      - POSTGRES_DATABASE=postgres
-  database:
-    image: "postgres:latest"
-    ports:
-      - "5432:5432"
+      - DATABASE_USERNAME=root
+      - DATABASE_PASSWORD=example
+      - DATABASE_HOST=database
+      - FLASK_HOST=0.0.0.0
+  mongo:
+    image: mongo
+    restart: always
     environment:
-      - POSTGRES_PASSWORD=docker
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: example
+    ports:
+      - 27017:27017
+  mongo-express:
+    image: mongo-express
+    restart: always
+    depends_on:
+      - mongo
+    ports:
+      - 8081:8081
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: root
+      ME_CONFIG_MONGODB_ADMINPASSWORD: example
