--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -5,43 +5,7 @@ services:
   backend:
     restart: always
     build: backend
-    depends_on: 
-      - mongo
     ports:
       - "5000:5000"
-    volumes:
-      - ./backend:/app
     environment:
-      - DATABASE_USERNAME=root
-      - DATABASE_PASSWORD=example
-      - DATABASE_HOST=database
-      - FLASK_HOST=0.0.0.0
-  frontend:
-    build: frontend
-    depends_on:
-      - backend
-    ports:
-      - 3000:3000
-    volumes:
-      - ./frontend:/app
-    environment:
-      - ENV=nonprod
-      - CHOKIDAR_USEPOLLING=true
-  mongo:
-    image: mongo
-    restart: always
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: example
-    ports:
-      - 27017:27017
-  mongo-express:
-    image: mongo-express
-    restart: always
-    depends_on:
-      - mongo
-    ports:
-      - 8081:8081
-    environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: root
-      ME_CONFIG_MONGODB_ADMINPASSWORD: example
+      - TEST=HELLO
