--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -6,4 +6,4 @@ COPY . .
 RUN python -m pip install -r requirements.txt
 
 EXPOSE 8000
-CMD [ "gunicorn", "-w", "4", "--bind", "0.0.0.0", "theroast_backend.wsgi" ]
+CMD [ "gunicorn", "-w", "4", "--bind", "0.0.0.0", "theroast.wsgi" ]
